--- a/Script/speed.Rmd
+++ b/Script/speed.Rmd
@@ -1,7 +1,12 @@
 ---
 title: "speed-and-distance"
+knit: (function(input_file, encoding) {
+  out_dir <- '../OUTPUT';
+  rmarkdown::render(input_file,
+    encoding=encoding,
+    output_file=file.path(dirname(input_file), out_dir, 'index.html'))})
 author: "J-Y CHoi"
-date: '2021 9 23 '
+date: '2021 9 23'
 output: html_document
 ---
 
